# mmp_os

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pull_request_template.md  static.yaml  testing.yaml
docs/docs/MMP/: index.md  prep.md  runmmp.md  utils.md  viz.md
docs/site/MMP/: index.html  prep.html  runmmp.html  utils.html  viz.html
src/MMP/: __init__.py  prep.py  runmmp.py  utils.py  viz.py
test/: test_prep.py  test_utils.py
