[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=63.2.0",
    "wheel>=0.37.1",
]

[project]
name = "MMP"
version = "0.0.1"
license = "MIT"
authors = [
    {name = "Redx Pharma Team"},
    {name = "J. L. McDonagh"},
]
description = "Matched Molecular Pairs (MMP) library wrapper around open source MMPDB library"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    "numpy>=1.24.4,<2.0.0",
    "pytest>=7.4.4",
    "mmpdb@git+https://github.com/rdkit/mmpdb#egg=master",
    "rdkit~=2024.3",
    "pandas<=2.1.0",
    "XlsxWriter>=3.2.0",
    "pdocs>=1.2.0",
    "pygments>=2.19.1",
]
